--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(DrumStudio src/main.cpp
         src/Drum/Drum.cpp
-        src/Throw_except/Throw_except.cpp)
+        src/Throw_except/Throw_except.cpp
+        src/Sequencer/Sequencer.cpp)
 
 include(FetchContent)
 
